--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js'></script>
     <script type='text/javascript' src='js/jquery.easing.1.2.js'></script>
     <script type='text/javascript' src='js/jquery.circulate.js'></script>
+    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 
 </head>
 <body>
