added sound button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 </head>
 <body>
 <button type="button" id="myButton" value="" class="button ">Renew!</button>
+
+
+<button type="button" id="mySoundButton" value="" class="button ">Turn Sound On</button>
 <div id="page-wrap">
     <div class="top-demo group">
         <div><img src="img/phil.jpg" class="imageJakki" alt=""/></div>
