fixed sound button

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>Bouncing Imags</title>
+    <title>Bouncing Images</title>
     <link rel="stylesheet" href="./css/foundation.min.css"/>
     <link rel='stylesheet' type='text/css' href='css/style.css'/>
-
     <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js'></script>
     <script type='text/javascript' src='js/jquery.easing.1.2.js'></script>
     <script type='text/javascript' src='js/jquery.circulate.js'></script>
@@ -15,8 +14,6 @@
 </head>
 <body>
 <button type="button" id="myButton" value="" class="button ">Renew!</button>
-
-
 <button type="button" id="mySoundButton" value="" class="button ">Turn Sound On</button>
 <div id="page-wrap">
     <div class="top-demo group">
